plugins {
    id 'org.owasp.dependencycheck' version '12.2.0'
    id 'scala'
    id 'java-library'
    id 'io.gatling.gradle' version '3.15.0'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

tasks.withType(JavaExec) {
    /* Configure the size of the JVM if necessary
    jvmArgs = ['-Xms1024m', '-Xmx2048m']
    */
    /* Use the following args to build a report when a test was terminated
    args = [
        "--reports-only", "<gatling-run-id>",
        '--results-folder', file('build/reports/gatling').absolutePath,
        ]
    */
}

tasks.withType(Copy).all{
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

repositories {
    mavenCentral()
}

dependencies {
    gatlingImplementation project(':common-performance')
    gatlingImplementation 'org.scala-lang:scala-library:3.8.3'
}

dependencyCheck {
    suppressionFile = "common/common-performance/owasp/owasp-suppressions.xml"
    analyzers.assemblyEnabled = false
}

tasks.register("runSimulation", JavaExec) {
    group = "Gatling Test"
    description = "Runs a specified Gatling simulation without interactive mode"

    classpath = sourceSets.gatling.runtimeClasspath
    mainClass.set("io.gatling.app.Gatling")

    // Add simulation class and results directory
    args += [
            "-s", "simulations.XUI_Simulation", // <---- SPECIFY YOUR SIMULATION HERE
            "-rf", layout.buildDirectory.get().asFile.toString() + "/reports/gatling"
    ]

    // JVM args required for Java 21
    jvmArgs += ["--add-opens=java.base/java.lang=ALL-UNNAMED"]

    // Pass through all -D properties from command line
    jvmArgs += System.properties.findAll { key, _ ->
        key instanceof String && key.startsWith("-D") == false && key != "java.class.path"
    }.collect { key, value ->
        "-D${key}=${value}"
    }
}

// Override gatlingRun task
tasks.named("gatlingRun") {
    dependsOn("runSimulation")
    enabled = false
}

gatling {
    gatlingVersion '3.15.0'
    scalaVersion '2.13.11'
    jvmArgs = ['-Xms2048m', '-Xmx4096m']
}

sourceSets {
    gatling {
        scala {
            srcDir 'src/gatling/simulations'
        }
        resources {
            srcDir 'src/gatling/resources'
        }
    }
}

configurations {
    gatlingImplementation.extendsFrom implementation
    gatlingRuntimeOnly.extendsFrom runtimeOnly
}

/* Generate stats per transaction for use in Jenkins*/
ext {
    transactionNamesToGraph = [""] // set the transactions to graph here
}

tasks.register('generateStats', JavaExec) {
    dependsOn tasks.named('gatlingRun')
    dependsOn tasks.named('compileGatlingScala')
    mainClass.set('stats.GenerateStatsByTxn')
    args = transactionNamesToGraph
    classpath = sourceSets.gatling.runtimeClasspath + project(":common-performance").sourceSets.main.runtimeClasspath
}

// Ensure it runs after Gatling
tasks.named('gatlingRun') {
    finalizedBy tasks.named('generateStats')
}